# c_practice

./: .gitignore  README.md
01-first_script/: README.md
03-pointers/src/: main.c
04-arrays_strings/: arrays_and_strings.md  main
04-arrays_strings/src/: main.c
05-string_lib/: Makefile  main
06-user_input/: Makefile  calc
07-files_input_output/src/: main.c
08-enums_and_structures/: main
08-enums_and_structures/src/: main.c
09-header_files_splitting_modules/: Makefile
09-header_files_splitting_modules/src/: function.c
1-first_script/: Makefile
10-gtk-guis/: CMakeLists.txt  Makefile  compile_commands.json  gtk.md  main
10-gtk-guis/src/: main.c
2-var_overflow/: Makefile  main  var_overflow.c
5-string_lib/: main.c
6-user_input/: Makefile
7-files_input_output/: better_output.txt  main.c
8-enums_and_structures/: main  main.c
9-header_files_splitting_modules/: main
arrays_strings/: main.c
enums_and_structures/: main  main.c
files_input_output/: main
first_script/: Makefile  main
header_files_splitting_modules/: Makefile  main  main.c
pointers/: main  main.c  pointer.md
string_lib/: string_library.md
user_input/: calculator.c  main  main.c
var_overflow/: README.md
